# poetbricks

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
poetbricks/: main.py
tests/: test_poetbricks.py
tests/data/: pyproject.toml
